@@ -185,6 +185,8 @@ Bug Fixes
 
 * SOLR-16621: Admin UI fails to grant user permissions that have wildcard role (janhoy)
 
+* SOLR-16647: Fix circuit breaker examples in solrconfig.xml (Colvin Cowie)
+
 Build
 ---------------------
 * Upgrade forbiddenapis to 3.4 (Uwe Schindler)
